rest of stroy 1.2 and story 1.3
